# coltt

./: .env  .gitignore  Makefile  README.md  UPDATE-LOG.md  edge.dockerfile  go.mod  go.sum  index.tensor  main.go  simple.dockerfile  simple.v2.dockerfile
(unused_next_delete_reference)/: go.mod
backup/: bit_stream.go  db.go  disk_partition.go  disk_wal.go  encoding.go  fake_encoder.go  fake_partition.go  json.go  label.go  logger.go  memory_partition.go  nnlog_db.go  partition.go  partition_list.go  plan.go  visit.go  wal.go
benchmark/: bench_insert.py  coltt_core.go  coltt_edge.go  coltt_edge_search.go  coltt_search.go  compared_edge.go  compared_multivector.go  go.mod  go.sum  milvus.docker.compose.yaml  milvus.go  milvus_insert.py  milvus_search.go  nil_error.go  nnv.go  nnv_core.go  nnv_edge.go  nnv_edge_search.go  nnv_search.go
cluster/: cluster_conn.go
config/: config.go
coordinator/: config.go  coordinator.go
core/: bitmap_indexer.go  constants.go  core.go  core_gen_id.go  core_helper.go  core_map.go  core_state_manager.go  hnsw_interface.go
data_access_layer/: commit.go  model.go  rollup.go
diskv/: batch.go  db.go  errors.go  merge.go  options.go  record.go  watch.go
e2e/: e2e_hnsw.go
edge/: bf16_quantization.go  bf16_vectorstore.go  constants.go  edge.go  edge_analyzer.go  edge_bitmap.go  edge_commit.go  edge_helper.go  edge_metadata.go  edge_normal_vector.go  edge_workerpool.go  (+15 more)
edge-rust/: Cargo.toml  build.rs
edge-rust/proto/: edge.proto
edge-rust/src/: db.rs  errors.rs  grpc_server.rs  id_generator.rs  lib.rs  main.rs  similarity.rs
(+465 files in other folders)
