[package]
name = "nnv-edge"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = { version = "0.12.3", features = ["transport"] }
prost = "0.13.3"
prost-types = "0.13.3"
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4"
bitvec = "1.0.1"
snowflake = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
anyhow = "1.0"
thiserror = "1.0"
rayon = "1.5"
tracing = "0.1"
tracing-subscriber = "0.3"
bincode = "1.3.3" 
ordered-float = "4.5.0"
[build-dependencies]
tonic-build = "0.12.3"
